tests/src/frontend/syntax/invalid/static_readonly_method.sk
class C() {
  static readonly fun m(): String { "Fail" }
}

fun main(): String {
  C::m()
}
